--- a/env.example
+++ b/env.example
@@ -121,20 +121,18 @@ TOKEN_DELETE_AFTER_DAYS=90
 TZ=Europe/Moscow
 
 # =============================================================================
-# PRODUCTION ONLY (Раскомментируйте для production)
+# PRODUCTION ONLY (Установите для production)
 # =============================================================================
+
+# Включить HTTPS настройки
+USE_HTTPS=true
 
 # SSL сертификаты (для Let's Encrypt)
 # CERTBOT_EMAIL=your-email@example.com
 # DOMAIN_NAME=yourdomain.com
 
-# Настройки безопасности
-# SECURE_SSL_REDIRECT=True
-# SESSION_COOKIE_SECURE=True
-# CSRF_COOKIE_SECURE=True
-# SECURE_HSTS_SECONDS=31536000
-# SECURE_HSTS_INCLUDE_SUBDOMAINS=True
-# SECURE_HSTS_PRELOAD=True
+# SSL режим для PostgreSQL (для внешних БД)
+# DB_SSLMODE=require
 
 # =============================================================================
 # МОНИТОРИНГ И ЛОГИ (Опционально)
