--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,18 @@ cryptography>=3.4.0
 
 # Автоматический планировщик задач
 APScheduler>=3.10.4
+
+# =============================================================================
+# БАЗЫ ДАННЫХ
+# =============================================================================
+# PostgreSQL драйвер
+psycopg2-binary>=2.9.9
+
+# Redis для кеширования
+redis>=5.0.0
+django-redis>=5.4.0
+
+# =============================================================================
+# PRODUCTION SERVER
+# =============================================================================
+gunicorn>=21.2.0
