--- a/flask_generator/nginx.conf
+++ b/flask_generator/nginx.conf
@@ -1,7 +1,11 @@
-# Nginx конфигурация для Flask AI микросервиса
+# =============================================================================
+# Nginx конфигурация для Flask AI микросервиса (Production)
+# =============================================================================
 
 events {
     worker_connections 1024;
+    use epoll;
+    multi_accept on;
 }
 
 http {
@@ -11,9 +15,9 @@ http {
     # Логирование
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+                    '"$http_user_agent" rt=$request_time';
 
-    access_log /var/log/nginx/access.log main;
+    access_log /var/log/nginx/access.log main buffer=16k flush=5s;
     error_log /var/log/nginx/error.log warn;
 
     # Основные настройки
@@ -21,7 +25,7 @@ http {
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
-    client_max_body_size 5M;
+    client_max_body_size 10M;
 
     # Gzip сжатие
     gzip on;
@@ -29,103 +33,102 @@ http {
     gzip_min_length 1024;
     gzip_types application/json text/plain;
 
-    # Upstream для Flask AI
-    upstream flask_ai {
+    # Upstream для Flask
+    upstream flask {
         least_conn;
-        server flask-ai:5000 max_fails=3 fail_timeout=30s;
-        # Добавьте дополнительные инстансы для масштабирования:
-        # server flask-ai-2:5000 max_fails=3 fail_timeout=30s;
+        server flask:5000 max_fails=3 fail_timeout=30s;
+        keepalive 16;
     }
 
-    # Rate limiting для защиты от злоупотреблений
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    # Rate limiting
+    limit_req_zone $binary_remote_addr zone=api:10m rate=5r/s;
 
-    # Основной сервер
+    # HTTP - редирект на HTTPS
     server {
         listen 80;
-        server_name localhost;
+        server_name _;
 
-        # Редирект на HTTPS (раскомментируйте для продакшена)
-        # return 301 https://$server_name$request_uri;
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # HTTPS сервер
+    server {
+        listen 443 ssl http2;
+        server_name flask.yourdomain.com;
+
+        # SSL сертификаты
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        
+        # SSL настройки
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-CHACHA20-POLY1305';
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
         # Rate limiting
         limit_req zone=api burst=20 nodelay;
 
-        # CORS для Django приложения
-        add_header Access-Control-Allow-Origin "https://your-django-domain.com";
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-        add_header Access-Control-Max-Age 3600;
+        # Заголовки безопасности
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Frame-Options DENY always;
+        add_header X-Content-Type-Options nosniff always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        
+        # Скрытие версии сервера
+        server_tokens off;
 
-        # Обработка preflight запросов
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
-
-        # Health check endpoint
-        location / {
-            proxy_pass http://flask_ai;
+        # Health check
+        location /health {
+            proxy_pass http://flask;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 5s;
+            proxy_read_timeout 10s;
+        }
+
+        # Основной endpoint
+        location / {
+            proxy_pass http://flask;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_connect_timeout 10s;
             proxy_send_timeout 300s;
             proxy_read_timeout 300s;
         }
 
-        # API endpoints с увеличенными таймаутами
+        # AI генерация - увеличенные таймауты
         location ~ ^/(generate-text|generate-image)$ {
-            proxy_pass http://flask_ai;
+            proxy_pass http://flask;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             
             # Увеличенные таймауты для AI генерации
             proxy_connect_timeout 30s;
             proxy_send_timeout 600s;
             proxy_read_timeout 600s;
             
-            # Буферизация для больших ответов
+            # Буферизация
             proxy_buffering on;
             proxy_buffer_size 128k;
             proxy_buffers 4 256k;
         }
-
-        # Тестовый endpoint
-        location /test {
-            proxy_pass http://flask_ai;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
-        }
-
-        # Безопасность
-        add_header X-Frame-Options DENY;
-        add_header X-Content-Type-Options nosniff;
-        add_header X-XSS-Protection "1; mode=block";
-        add_header Referrer-Policy "strict-origin-when-cross-origin";
-        
-        # Скрытие версии сервера
-        server_tokens off;
     }
-
-    # HTTPS сервер (раскомментируйте для продакшена)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name your-flask-domain.com;
-    #
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512;
-    #     ssl_prefer_server_ciphers off;
-    #
-    #     # Те же location блоки что и выше
-    # }
 }
