--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,9 @@ cryptography>=3.4.0
 # Автоматический планировщик задач
 APScheduler>=3.10.4
 
+# Получение IP-адреса клиента (для security middleware)
+django-ipware>=6.0.0
+
 # =============================================================================
 # БАЗЫ ДАННЫХ
 # =============================================================================
