--- a/env.example
+++ b/env.example
@@ -76,6 +76,12 @@ FLASK_EXTERNAL_URL=https://your-flask-server.com
 # Токен Telegram бота (получить у @BotFather: https://t.me/BotFather)
 TELEGRAM_BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz
 
+# Токен публичного бота (для публичной версии с офертой)
+TELEGRAM_BOT_TOKEN_PUBLIC=1234567890:PublicBotToken
+
+# Telegram владельца/разработчика для перенаправления клиентов (бета-тест)
+OWNER_TELEGRAM=@rain511
+
 # URL для webhook (HTTPS обязателен в production!)
 # Формат: https://yourdomain.com/telegram/webhook/
 TELEGRAM_WEBHOOK_URL=https://yourdomain.com/telegram/webhook/
