--- a/env.production.example
+++ b/env.production.example
@@ -60,6 +60,12 @@ GENERATOR_ENCRYPTION_KEY=CHANGE_ME_TO_FERNET_KEY
 # Получите у @BotFather
 TELEGRAM_BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz
 
+# Токен публичного бота (для публичной версии с офертой)
+TELEGRAM_BOT_TOKEN_PUBLIC=1234567890:PublicBotToken
+
+# Telegram владельца/разработчика для перенаправления клиентов (бета-тест)
+OWNER_TELEGRAM=@rain511
+
 # Секрет для webhook (сгенерируйте: openssl rand -hex 32)
 TELEGRAM_WEBHOOK_SECRET=CHANGE_ME_TO_RANDOM_64_CHAR_HEX
 
