--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       start_period: 40s
 
   # ===========================================================================
-  # Telegram Bot
+  # Telegram Bot (автоматическая выдача токенов)
   # ===========================================================================
   bot:
     build:
@@ -79,6 +79,23 @@ services:
     depends_on:
       django:
         condition: service_healthy
+    networks:
+      - ghostwriter-network
+    restart: unless-stopped
+
+  # ===========================================================================
+  # Telegram Bot Public (бета-тестирование)
+  # ===========================================================================
+  bot-public:
+    build:
+      context: .
+      dockerfile: Dockerfile.bot-public
+    container_name: ghostwriter-bot-public
+    environment:
+      - TELEGRAM_BOT_TOKEN_PUBLIC=${TELEGRAM_BOT_TOKEN_PUBLIC}
+      - OWNER_TELEGRAM=${OWNER_TELEGRAM:-@rain511}
+    volumes:
+      - ./logs:/app/logs
     networks:
       - ghostwriter-network
     restart: unless-stopped
