--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -107,7 +107,8 @@ services:
           memory: 128M
 
   # ===========================================================================
-  # Telegram Bot Public (бета-тестирование, перенаправление к разработчику)
+  # Telegram Bot Public (бета-тестирование, privacy-compliant)
+  # НЕ собирает персональные данные, логи только в stdout
   # ===========================================================================
   bot-public:
     build:
@@ -117,8 +118,7 @@ services:
     environment:
       - TELEGRAM_BOT_TOKEN_PUBLIC=${TELEGRAM_BOT_TOKEN_PUBLIC}
       - OWNER_TELEGRAM=${OWNER_TELEGRAM:-@rain511}
-    volumes:
-      - logs_data:/app/logs
+    # Без volumes — бот не сохраняет данные на диск (privacy-compliant)
     networks:
       - ghostwriter-network
     restart: always
