Добавлен мониторинг токенов GigaChat и кликов подписки (v2.0)
Добавлен мониторинг использования токенов GigaChat API:
- Модель GigaChatTokenUsage для отслеживания расхода токенов
- Автоматическое логирование всех запросов к GigaChat
- Статистика в админ-панели с расчетом стоимости

Добавлено отслеживание кликов по кнопке "Купить доступ":
- Модель SubscriptionButtonClick для аналитики
- JavaScript-трекинг всех кликов
- Статистика по страницам и пользователям в админке

Обновлены Docker файлы для production (v2.0):
- Обновлены Dockerfile, docker-entrypoint.sh, docker-compose
- Добавлены новые миграции (0011, 0012)
- Обновлен bot-public для privacy compliance

Все системы мониторинга работают автоматически.

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,6 +3,11 @@
 # =============================================================================
 # Развертывание на российском сервере: Django + Bot + PostgreSQL + Redis + Nginx
 # Flask микросервис деплоится отдельно на зарубежном сервере
+# 
+# Версия 2.0 - включает:
+# - Мониторинг токенов GigaChat
+# - Отслеживание кликов по кнопке подписки
+# - Privacy-compliant публичный бот
 # =============================================================================
 # Запуск: docker-compose -f docker-compose.production.yml up -d
 # Логи: docker-compose -f docker-compose.production.yml logs -f
